# xwnode

./: .gitignore  3.0.0  ARCHITECTURE_COMPARISON.md  CRITICAL_FIXES_SUMMARY.md  DOUBLE_CHECK_COMPLETE.md  FINAL_VERSION_COMPARISON.md  GUIDE_COMPLIANCE_STATUS.md  IMPLEMENTATION_REPORT.md  MANIFEST.in  MIGRATE_FEATURE_VERIFICATION.md  MIGRATION_SUMMARY.md  PERFORMANCE_JUMPS_SUMMARY.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  PRODUCTION_STRATEGIES_COMPLETE.md  README.md  README_LONG.md  V029_GUIDELINES_COMPLIANCE_SUCCESS.md  VERIFICATION_COMPLETE.md  YOUR_FINAL_OUTCOME.md  add_strategy_types.py  benchmark_contracts_performance.py  benchmark_rigorous.py  fix_abstract_methods.py  fix_imports.py  generate_executors.py  pyproject.toml  pyproject.xwnode.toml  pytest.ini  refactor_structure.py  requirements.txt  scan_strategies.py  test_debug.txt  test_installation_modes.py  test_iso_debug.txt  test_migration.py  verify_compliance.py  verify_imports.py
.github/: workflows-config.yaml
.github/workflows/: publish.yml
benchmarks/: INDEX.md  README.md  all_strategies_baseline.json  benchmark_all_strategies.py  benchmark_complete_evolution.py  benchmark_contracts_performance.py  benchmark_cow_impact.py  benchmark_masstree_ttree.py  benchmark_rigorous.py  benchmark_v27_vs_v28.py  benchmark_v28_vs_v30_async_first.py  edge_strategies_baseline.json  lru_comparison_analysis.txt  perf_comparison_v28_v30.py  visualize_benchmark.py
benchmarks/20260321-benchmark xwnode consolidated/: README.md
docs/: ALL_VERSIONS_COMPARISON.md  ASYNC_FIRST_IMPLEMENTATION_SUCCESS.md  ASYNC_USAGE_EXAMPLES.md  BACKUP_MANIFEST.md  BENCHMARK_RESULTS_V2.md  CACHE_SYSTEM_IMPLEMENTATION_V0.0.1.29.md  COMPETITOR_ANALYSIS.md  COW_IMPACT_RESULTS.md  EXECUTIVE_SUMMARY.md  EXPLANATION.md  FINAL_OUTCOME.md  FINAL_PERFORMANCE_REPORT.md  GUIDELINES_ARCHITECTURE_REFACTORING.md  GUIDE_01_USAGE.md  INDEX.md  INDIVIDUAL_STRATEGY_TESTS_PROGRESS.md  MASTER_INDEX.md  MISSING_STRATEGIES_IMPLEMENTATION_PLAN.md  NEW_STRATEGIES_XWQUERY_INTEGRATION.md  OPTIMIZATION_STATUS_REPORT.md  PERFORMANCE_ANALYSIS_V28_VS_V30.md  PERFORMANCE_OPTIMIZATION_V31.md  PERFORMANCE_OPTIMIZATION_V32.md  PERFORMANCE_OPTIMIZATION_V33.md  PERFORMANCE_QUICK_REFERENCE.md  PROJECT_PHASES.md  README_CONTRACTS_EVOLUTION.md  RECOMMENDATIONS.md  REF_01_REQ.md  REF_11_COMP.md  REF_12_IDEA.md  REF_13_ARCH.md  REF_14_DX.md  REF_15_API.md  REF_21_PLAN.md  REF_22_PROJECT.md  REF_35_REVIEW.md  REF_51_TEST.md  REF_54_BENCH.md  REVERT_COMPLETE_V028.md  (+14 more)
docs/_archive/: README.md
docs/changes/: 50_OPERATIONS_IMPLEMENTATION_COMPLETE.md  APPEND_ONLY_FIX.md  BENCHMARK_FIXES_SUMMARY.md  CHANGE_20260208_120000_000_ARCHIVE_CONSOLIDATION.md  COMPLETE_ARCHITECTURE_SUMMARY.md  COMPLETE_FIX_SUMMARY.md  COMPLETE_VERSION_PERFORMANCE_COMPARISON.md  COW_IMPLEMENTATION_COMPLETE.md  DEV_GUIDELINES_IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  REFACTORING_COMPLETE.md  REFACTORING_COMPLETE_SUCCESS.md  REFACTORING_PLAN.md  REFACTORING_SUCCESS.md  REFACTORING_SUMMARY.md  REFACTORING_VERIFICATION_COMPLETE.md  ROOT_CAUSE_FIXES.md  SESSION_1_COMPLETE_SUMMARY.md  XWNODE_XWDATA_REFACTORING_COMPLETE.md
docs/logs/: ARCHIVE_VALUE_CAPTURE_XWNODE.md
docs/tests/: TEST_20251203_0126_DATA_OPERATIONS.md
examples/: demo_sql_results.py  enhanced_strategy_demo.py  enhanced_xnode_demo.py  sql_demo_results.py  xwnode_sql_actions.sql
examples/db_example/: __init__.py  run_all_benchmarks.py  run_benchmarks.bat
examples/x5/: README.md  __init__.py  analyze_crossover.py  benchmark_all_tests.py  benchmark_all_tests_2.py  benchmark_all_tests_3_4.py  benchmark_output.txt  benchmark_progress.json  benchmark_progress_3_4.json  benchmark_progress_v2.json  compare_versions.py  comparison_results.txt  data_operations_interface.py  data_utils_indexed_interface.py  data_utils_interface.py  generate_1gb_file.py  generate_recommendations.py  generate_test_file.py  json_libs.py  json_libs_indexed.py  json_libs_indexed_v4.py  json_libs_v4.py  json_utils.py  json_utils_indexed.py  surgical_operations_demo.py  test_atomic_operations.py  test_run.txt
scripts/: add_file_headers.py  audit_dependencies.py  check_test_coverage.py  run_all_tests.py  run_performance_benchmarks.py  verify_strategy_inheritance.py
src/: xwnode.py  xwnode_wrapper.py
src/exonware/: __init__.py
tests/: FINAL_RUN.txt  README.md  __init__.py  complete_run.txt  conftest.py  full_run.txt  runner.py  scale_config.py  test_cache_system.py  verify_installation.py
tests/0.core/: README.md  __init__.py  conftest.py  final_test.txt  runner.py  simple_import_test.py  test_adj_matrix_edge_strategy.py  test_adjacency_list_edge_strategy.py  test_adjacency_list_node_strategy.py  test_aho_corasick_strategy.py  test_all_edge_strategies.py  test_all_node_strategies.py  test_array_list_strategy.py  test_art_strategy.py  test_ast_strategy.py  test_avl_tree_strategy.py  test_b_plus_tree_strategy.py  test_b_tree_strategy.py  test_bidir_wrapper_edge_strategy.py  test_bitmap_strategy.py  test_bitset_dynamic_strategy.py  test_block_adj_matrix_edge_strategy.py  test_bloom_filter_strategy.py  test_bw_tree_strategy.py  test_circular_buffer_strategy.py  test_compressed_graph_edge_strategy.py  test_coo_edge_strategy.py  test_core_analytics_structures.py  test_core_cache_management.py  test_core_cow.py  test_core_event_routing.py  test_core_graph_manager.py  test_core_indexing.py  test_core_spatial_indexing.py  test_count_min_sketch_strategy.py  test_cow_tree_strategy.py  test_csc_edge_strategy.py  test_csr_edge_strategy.py  test_cuckoo_hash_strategy.py  test_data_interchange_optimized_strategy.py  (+63 more)
tests/1.unit/: conftest.py  final_results.txt  quick_perf_test.py  runner.py  simple_sql_test.py  test_10_validation_operations.py  test_11_aggregation_operations.py  test_12_file_operations.py  test_13_concurrency_operations.py  test_14_async_operations.py  test_15_utility_operations.py  test_16_monitoring_operations.py  test_1_create_operations.py  test_2_read_operations.py  test_3_update_operations.py  test_4_delete_operations.py  test_5_list_query_operations.py  (+16 more)
(+626 files in other folders)
